--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ jobs:
       env: DESC="unit test with basic deps" CHANS=$CHANS_REL
       before_install:
         #- pip install pyctdev && doit miniconda_install && pip uninstall -y doit pyctdev
+        - pip install pyctdev
         - wget -q "https://github.com/conda-forge/miniforge/releases/download/4.8.2-1/Miniforge3-4.8.2-1-Linux-aarch64.sh" -O miniconda.sh
         - chmod +x miniconda.sh
         - ./miniconda.sh -b -p $HOME/miniconda
