--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,6 @@ jobs:
         - source activate test-environment
         - conda install pyzmq param holoviews blas beautifulsoup4 bzip2 conda-build  dbus expat filelock fontconfig  glib  glob2  gmp  gst-plugins-base gstreamer hvplot libarchive  libedit liblief libuuid libxcb libxml2 lzo matplotlib ncurses patchelf pcre pkginfo psutil py-lief python-libarchive-c  ripgrep sip soupsieve
         - pip install 'pandoc' 'pyctdev' 'coveralls' 'nose' 'flake8' 'parameterized' 'pytest' 'nbsmoke >=0.2.0' 'colorcet'
-        #- doit develop_install $CHANS_DEV -o tests
         - doit env_capture
       script: doit test_unit
 
@@ -59,9 +58,19 @@ jobs:
       <<: *default
       env: DESC="unit test with extra dependencies" CHANS=$CHANS_REL NAME="extra-deps-env"
       install:
-        - doit env_create $CHANS_DEV --python=$PYTHON_VERSION --name=$NAME
+        - doit env_create $CHANS_DEV --python=$PYTHON_VERSION --name=$NAME || true
         - source activate $NAME
-        - doit develop_install $CHANS_DEV -o tests -o examples
+        - sudo apt update -y
+        - sudo apt-get install libgdal-dev -y
+        - conda install pyzmq param holoviews blas beautifulsoup4 bzip2 conda-build  dbus expat filelock fontconfig  glib  glob2  gmp  gst-plugins-base gstreamer hvplot libarchive  libedit liblief libuuid libxcb libxml2 lzo matplotlib ncurses patchelf pcre pkginfo psutil py-lief python-libarchive-c  ripgrep sip soupsieve
+        - pip install 'pandoc' 'pyctdev' 'coveralls' 'nose' 'flake8' 'parameterized' 'pytest' 'nbsmoke >=0.2.0' 'colorcet'
+        #- doit develop_install $CHANS_DEV -o tests -o examples
+        - conda install -c numba numba pyarrow retrying	
+        - python3.6 -m pip install 'spatialpandas' 'rasterio'
+        - conda install 's3fs' 'scipy' 'pillow' 'selenium' 'dask' 'datashader>=0.6.5' 'notebook>=5.4' pandas asciitree 'networkx' 'streamz>=0.3.0' 'xarray' 'panel' numpy  bokeh lxml
+        - conda install -c conda-forge/label/cf202003 'intake' thrift-cpp 
+        - python3.6 -m pip install 'intake-parquet' 'intake-xarray' 
+
         - doit env_capture
       script: doit test_unit
       after_success: coveralls
@@ -69,9 +78,19 @@ jobs:
     - <<: *extra_default
       env: DESC="test examples with extra dependencies" CHANS=$CHANS_REL NAME="extra-deps-env-notebooks"
       install:
-        - doit env_create $CHANS_DEV --python=$PYTHON_VERSION --name=$NAME
+        - doit env_create $CHANS_DEV --python=$PYTHON_VERSION --name=$NAME || true
         - source activate $NAME
-        - doit develop_install $CHANS_DEV -o tests -o examples_extra
+        - sudo apt update -y
+        - sudo apt install libgraphviz-dev -y
+        - sudo apt-get install libgdal-dev -y
+        - conda install pyzmq param holoviews blas beautifulsoup4 bzip2 conda-build  dbus expat filelock fontconfig  glib  glob2  gmp  gst-plugins-base gstreamer hvplot libarchive  libedit liblief libuuid libxcb libxml2 lzo matplotlib ncurses patchelf pcre pkginfo psutil py-lief python-libarchive-c  ripgrep sip soupsieve
+        - pip install 'pandoc' 'pyctdev' 'coveralls' 'nose' 'flake8' 'parameterized' 'pytest' 'nbsmoke >=0.2.0' 'colorcet'
+        #- doit develop_install $CHANS_DEV -o tests -o examples
+        - conda install -c numba numba pyarrow retrying	
+        - python3.6 -m pip install 'spatialpandas' 'rasterio'
+        - conda install 's3fs' 'scipy' 'pillow' 'selenium' 'dask' 'datashader>=0.6.5' 'notebook>=5.4' pandas asciitree 'networkx' 'streamz>=0.3.0' 'xarray' 'panel' numpy  bokeh lxml
+        - conda install -c conda-forge/label/cf202003 'intake' thrift-cpp 
+        - python3.6 -m pip install 'intake-parquet' 'intake-xarray' 'pygraphviz'
         - conda install -c conda-forge firefox geckodriver
         - doit env_capture
       script:
