--- a/.travis.yml
+++ b/.travis.yml
@@ -68,9 +68,9 @@ jobs:
         - conda install -c numba numba pyarrow retrying	
         - conda install 's3fs' 'scipy' 'pillow' 'selenium' 'dask' 'datashader>=0.6.5' 'notebook>=5.4' pandas asciitree 'networkx' 'streamz>=0.3.0' 'xarray' 'panel' numpy  bokeh lxml
         - which python3.6
-        - python3.6 -m pip install 'spatialpandas' 'rasterio'
+        - pip install 'spatialpandas' 'rasterio'
         - conda install -c conda-forge/label/cf202003 'intake' thrift-cpp 
-        - python3.6 -m pip install 'intake-parquet' 'intake-xarray' 
+        - pip install 'intake-parquet' 'intake-xarray' 
 
         - doit env_capture
       script: doit test_unit
