--- a/.travis.yml
+++ b/.travis.yml
@@ -66,8 +66,12 @@ jobs:
         #- pip install 'pandoc' 'pyctdev' 'coveralls' 'nose' 'flake8' 'parameterized' 'pytest' 'nbsmoke >=0.2.0' 'colorcet'
         #- conda install -c numba numba pyarrow retrying	
         #- conda install 's3fs' 'scipy' 'pillow' 'selenium' 'dask' 'datashader>=0.6.5' 'notebook>=5.4' pandas asciitree 'networkx' 'streamz>=0.3.0' 'xarray' 'panel' 'numpy==1.18.4'  bokeh lxml
+        - which python 
+        - which pip
         - which python3.6
-        - $HOME/miniconda/envs/extra-deps-env/bin/python -m $HOME/miniconda/envs/extra-deps-env/bin/pip install 'spatialpandas' 'rasterio'
+        - ls /home/travis/miniconda/envs/extra-deps-env/lib/python3.6/site-packages/
+        - /home/travis/miniconda/envs/extra-deps-env/bin/python -m /home/travis/miniconda/envs/extra-deps-env/bin/pip install 'spatialpandas' 'rasterio' || true
+        - /home/travis/miniconda/envs/extra-deps-env/bin/python3.6 -m /home/travis/miniconda/envs/extra-deps-env/bin/pip install 'spatialpandas' 'rasterio' || true
         - conda install -c conda-forge/label/cf202003 'intake' thrift-cpp 
         - pip install 'intake-parquet' 'intake-xarray' 
 
