--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,8 @@ jobs:
         - /home/travis/miniconda/envs/extra-deps-env/bin/python -m pip install 'spatialpandas' 'rasterio' || true
         - /home/travis/miniconda/envs/extra-deps-env/bin/python3.6 -m pip install 'spatialpandas' 'rasterio' || true
         #- conda install -c conda-forge/label/cf202003 'intake' thrift-cpp 
-        - pip install 'spatialpandas' 'rasterio' #to be deleted
+        - pip install 'numpy==1.18.4' || true
+        - pip install 'spatialpandas' 'rasterio'  || true#to be deleted
         #- pip install 'intake-parquet' 'intake-xarray' 
 
         - doit env_capture
