--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,7 @@ jobs:
         - source activate $NAME
         - conda install pip
         - cunda update pip
+        - conda install numpy
         - sudo apt update -y
         - sudo apt-get install libgdal-dev gfortran -y
         #- conda install pyzmq param holoviews blas beautifulsoup4 bzip2 conda-build  dbus expat filelock fontconfig  glib  glob2  gmp  gst-plugins-base gstreamer hvplot libarchive  libedit liblief libuuid libxcb libxml2 lzo matplotlib ncurses patchelf pcre pkginfo psutil py-lief python-libarchive-c  ripgrep sip soupsieve
