--- a/.travis.yml
+++ b/.travis.yml
@@ -65,6 +65,11 @@ jobs:
         - conda install pip
         - conda update pip
         - conda install numpy
+        - sudo add-apt-repository ppa:ubuntugis/ppa -y
+        - sudo apt-get update -y
+        - sudo apt-get install gdal-bin libgdal-dev -y
+        - pip install -U pip
+        - pip install rasterio
         #- conda install pyzmq param holoviews blas beautifulsoup4 bzip2 conda-build  dbus expat filelock fontconfig  glib  glob2  gmp  gst-plugins-base gstreamer hvplot libarchive  libedit liblief libuuid libxcb libxml2 lzo matplotlib ncurses patchelf pcre pkginfo psutil py-lief python-libarchive-c  ripgrep sip soupsieve
         #- pip install 'pandoc' 'pyctdev' 'coveralls' 'nose' 'flake8' 'parameterized' 'pytest' 'nbsmoke >=0.2.0' 'colorcet'
         #- conda install -c numba numba pyarrow retrying	
