--- a/.travis.yml
+++ b/.travis.yml
@@ -30,30 +30,31 @@ stages:
   - name: package
     if: tag =~ ^v(\d+|\.)*[^a-z]\d*$
 
-arch:
-  - amd64
-  - arm64
-
 jobs:
   include:
     ########## DEVELOPER INSTALL ##########
 
     - &default
       stage: test
+      arch: arm64
       env: DESC="unit test with basic deps" CHANS=$CHANS_REL
       before_install:
-        - pip install pyctdev
-        - wget -q "https://github.com/conda-forge/miniforge/releases/download/4.8.2-1/Miniforge3-4.8.2-1-Linux-aarch64.sh" -O miniconda.sh
-        - chmod +x miniconda.sh
-        - ./miniconda.sh -b -p $HOME/miniconda
-        - export PATH="$HOME/miniconda/bin:$PATH" && hash -r
+        - if [ `uname -m` = 'aarch64' ] then 
+            pip install pyctdev;
+            wget -q "https://github.com/conda-forge/miniforge/releases/download/4.8.2-1/Miniforge3-4.8.2-1-Linux-aarch64.sh" -O miniconda.sh;
+            chmod +x miniconda.sh;
+            ./miniconda.sh -b -p $HOME/miniconda;
+          fi
+        - export PATH="$HOME/miniconda/bin:$PATH" && hash -r;
         - conda config --set always_yes True
         - doit ecosystem_setup
       install:
-        - doit env_create $CHANS_DEV --python=$PYTHON_VERSION || true
-        - source activate test-environment
-        - conda install pyzmq param holoviews blas beautifulsoup4 bzip2 conda-build  dbus expat filelock fontconfig  glib  glob2  gmp  gst-plugins-base gstreamer hvplot libarchive  libedit liblief libuuid libxcb libxml2 lzo matplotlib ncurses patchelf pcre pkginfo psutil py-lief python-libarchive-c  ripgrep sip soupsieve
-        - pip install 'pandoc' 'pyctdev' 'coveralls' 'nose' 'flake8' 'parameterized' 'pytest' 'nbsmoke >=0.2.0' 'colorcet'
+        - if [ `uname -m` = 'aarch64' ] then 
+            doit env_create $CHANS_DEV --python=$PYTHON_VERSION || true;
+            source activate test-environment;
+            conda install pyzmq param holoviews blas beautifulsoup4 bzip2 conda-build  dbus expat filelock fontconfig  glib  glob2  gmp  gst-plugins-base gstreamer hvplot libarchive  libedit liblief libuuid libxcb libxml2 lzo matplotlib ncurses patchelf pcre pkginfo psutil py-lief python-libarchive-c  ripgrep sip soupsieve;
+            pip install 'pandoc' 'pyctdev' 'coveralls' 'nose' 'flake8' 'parameterized' 'pytest' 'nbsmoke >=0.2.0' 'colorcet';
+          fi
         - doit env_capture
       script: doit test_unit
 
